--- a/style.css
+++ b/style.css
@@ -4,39 +4,25 @@
     --third: #C5BAFF;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: system-ui;
-}
-
 body {
     background-color: var(--main);
 }
 
 header {
-    width: 100%;
-    height: 70vh;
+    position: relative;
     background-color: var(--second);
 }
 
-.judul {
-    padding-top: 60px;
-    display: flex;
-    align-items: center;
-    gap: 4em;
+.profile img, .profile div {
+    position: relative;
+    bottom: 100px;
 }
 
-header img {
-    border-radius: 300px;
-    width: 11em;
-    height: 11em;
-    margin-left: 10em;
-    border: solid 4px var(--third);
-    box-shadow: 0px 0px 30px blue;
+.profile img {
+    border: var(--third) solid 4px;
 }
 
-header h1 {
-    font-size: 2.8em;
-    margin: 0 -10px;
+.wave {
+    position: absolute;
+    bottom: -1px;
 }
