navigasi link navbar

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     background-color: var(--main);
 }
 
+.dropdown-menu {
+    background-color: var(--third);
+}
+
 .jumbotron  {
     background-color: var(--second);
 }
