--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
     transition: transform 0.3s ease;
 }
 
+.date p {
+    font-size: 0.7em;
+    margin: 0;
+}
+
 .html-tag {
     background-color: orangered;
     color: white;
