--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: var(--third);
 }
 
-.jumbotron  {
+.jumbotron {
     background-color: var(--second);
 }
 
@@ -70,4 +70,30 @@ body {
 
 .btn {
     background-color: var(--third);
+}
+
+.container-kotak {
+    width: 120%;
+    height: 250px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    left: -100px;
+    z-index: 1;
+    opacity: 0.8;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+}
+
+.kotak {
+    width: 4em;
+    height: 3em;
+    margin: 1px -5px;
+    background-color: var(--third);
+    transition: 1s ease;
+    clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
+}
+
+.kotak:hover {
+    transition: 0s;
 }
