- perbaikan bug tampilan - menambahkan dropdown sosial media github - menambahkan front-end web developer di judul

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: var(--main);
+    overflow-x: hidden;
 }
 
 .dropdown-menu {
@@ -96,4 +97,14 @@ body {
 
 .kotak:hover {
     transition: 0s;
+}
+
+@media screen and (max-width: 768px) {
+    .container-kotak {
+        display: none;
+    }
+
+    .jumbotron img {
+        width: 170px;
+    }
 }
