--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --main: #E8F9FF;
-    --second: #C4D9FF;
-    --third: #C5BAFF;
+    --main: #0c2344;
+    --second: #b4ceff;
+    --third: #71b5ff;
 }
 
 body {
@@ -10,40 +10,38 @@ body {
 }
 
 /* ANIMASI OPENING */
-.containerOpening {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    z-index: 2000;
-}
-
 .topOpening {
     width: 100%;
     height: 50%;
     background-color: var(--third);
-    position: relative;
-    animation: topAnimation 2s forwards;
-    animation-delay: 1.5s;
+    position: fixed;
+    animation: topAnimation 1.5s forwards;
+    animation-delay: 1.2s;
     display: flex;
     align-items: end;
     justify-content: center;
+    z-index: 2000;
 }
 
 .bottomOpening {
     width: 100%;
     height: 50%;
     background-color: var(--third);
-    position: relative;
+    position: fixed;
     bottom: 0;
-    animation: bottomAnimation 2s forwards;
-    animation-delay: 1.5s;
+    animation: bottomAnimation 1.5s forwards;
+    animation-delay: 1.2s;
     display: flex;
     justify-content: center;
     text-align: center;
+    z-index: 2000;
 }
 
 @keyframes topAnimation {
-    from {top: 0;}
+    from {
+        top: 0;
+    }
+
     to {
         top: -50%;
         display: none;
@@ -51,14 +49,19 @@ body {
 }
 
 @keyframes bottomAnimation {
-    from {bottom: 0;}
+    from {
+        bottom: 0;
+    }
+
     to {
         bottom: -50%;
         display: none;
     }
 }
+
 /* ANIMASI OPENING END */
 
+nav,
 .dropdown-menu {
     background-color: var(--third);
 }
@@ -123,10 +126,6 @@ body {
     width: 35em;
 }
 
-.btn {
-    background-color: var(--third);
-}
-
 /* ANIMASI KOTAK BERWARNA */
 .container-kotak {
     width: 120%;
@@ -153,18 +152,19 @@ body {
 .kotak:hover {
     transition: 0s;
 }
+
 /* ANIMASI KOTAK BERWARNA END */
 
 @media screen and (max-width: 768px) {
     .container-kotak {
         display: none;
     }
-    
+
     .jumbotron img {
         width: 170px;
     }
 
-    .contact form{
+    .contact form {
         width: 70%;
     }
 }
